WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131955
topContentInset does not play well with fullscreen elements
https://bugs.webkit.org/show_bug.cgi?id=131955
Summary
topContentInset does not play well with fullscreen elements
Beth Dakin
Reported
2014-04-21 14:49:30 PDT
If you take an element (such as a <video>) fullscreen when you have a topContentInset set, there will be an inset-sized gap at the top of the fullscreen video. <
rdar://problem/16651925
>
Attachments
Patch
(5.80 KB, patch)
2014-04-21 14:57 PDT
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-04-21 14:57:19 PDT
Created
attachment 229838
[details]
Patch
Beth Dakin
Comment 2
2014-04-21 15:23:25 PDT
http://trac.webkit.org/changeset/167630
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug