Source/WebKit2/WebProcess/FullScreen/WebFullScreenManager.cpp
@@ -65,7 +65,8 @@ PassRefPtr<WebFullScreenManager> WebFullScreenManager::create(WebPage* page)
 }
 
 WebFullScreenManager::WebFullScreenManager(WebPage* page)
-    : m_page(page)
+    : m_topContentInset(0)
+    , m_page(page)
 {
 }
     
@@ -156,10 +157,13 @@ void WebFullScreenManager::close()
 void WebFullScreenManager::saveScrollPosition()
 {
     m_scrollPosition = m_page->corePage()->mainFrame().view()->scrollPosition();
+    m_topContentInset = m_page->corePage()->topContentInset();
+    m_page->corePage()->setTopContentInset(0);
 }
 
 void WebFullScreenManager::restoreScrollPosition()
 {
+    m_page->corePage()->setTopContentInset(m_topContentInset);
     m_page->corePage()->mainFrame().view()->setScrollPosition(m_scrollPosition);
 }
 
